# poetry self add poetry-bumpversion

[build-system]
build-backend = "poetry.core.masonry.api"
requires = [
  "poetry-core",
]

[tool]
[tool.poetry]
authors = ["eggplants <w10776e8w@yahoo.co.jp>"]
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: Implementation :: CPython",
]
description = "Convert japanese kana from ba-bi-bu-be-bo into va-vi-vu-ve-vo"
keywords = ["joke", "cli", "japanese"]
name = "wiredify"
packages = [{include = "wiredify"}]
license = "MIT"
readme = "README.md"
repository = "https://github.com/eggplants/wiredify"
version = "0.1.0"

[tool.poetry.dependencies]
python = ">=3.8,<4"

[tool.poetry.group.dev.dependencies]
mypy = ">=0.991,<1.12"
pre-commit = ">=2.20,<4.0"
taskipy = "^1.10.3"
pytest = ">=7.2.2,<9.0.0"
pytest-cov = ">=4,<6"

[tool.poetry.scripts]
wiredify = "wiredify.main:main"

[tool.black]
line-length = 120
target-version = ['py39']

[tool.ruff]
select = ["ALL"]
ignore = ["D", "ANN101"]
line-length = 120

[tool.ruff.mccabe]
max-complexity = 10

[tool.ruff.per-file-ignores]
"main.py" = [
  "T201", # `print` found
]
"tests/*test_*.py" = [
  "INP001",  # File tests/test_*.py is part of an implicit namespace package. Add an __init__.py.
  "S101", # Use of assert detected
]

[tool.mypy]
pretty = true
python_version = "3.9"
show_error_codes = true
strict = true

[tool.pytype]
python_version = '3.10'
jobs = '4'
report_errors = true
precise_return = true
protocols = true
strict_import = true

[tool.poetry_bumpversion.file."wiredify/__init__.py"]

[tool.taskipy.tasks]
test = "pytest -s --cov=wiredify --cov-report=term"
"test:ci" = "task test -s --cov-report=xml:cov.xml"
lint = "pre-commit run -a"
profile = "python -m cProfile"
