[build-system]
build-backend = "poetry.core.masonry.api"
requires = [
  "poetry-core>=2",
]

[project]
name = "wiredify"
version = "0.1.0"
description = "Convert japanese kana from ba-bi-bu-be-bo into va-vi-vu-ve-vo"
readme = "README.md"
keywords = [
  "cli",
  "japanese",
  "joke",
]
license = { text = "MIT" }
authors = [
  { name = "eggplants", email = "w10776e8w@yahoo.co.jp" },
]
requires-python = ">=3.9,<4"
classifiers = [
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: Implementation :: CPython",
  "Typing :: Typed",
]
urls.Repository = "https://github.com/eggplants/wiredify"
scripts.wiredify = "wiredify.main:main"

[tool.poetry]
requires-poetry = ">=2.0"
packages = [
  { include = "wiredify" },
]

[tool.poetry.group.dev.dependencies]
mypy = ">=0.991,<1.15"
pre-commit = ">=2.20,<4.0"
taskipy = "^1.10.3"
pytest = ">=7.2.2,<9.0.0"
pytest-cov = ">=4,<6"

[tool.poetry.requires-plugins]
poetry-plugin-shell = ">=1.0"

[tool.ruff]
lint.select = [ "ALL" ]
lint.ignore = [ "D" ]
lint.per-file-ignores."main.py" = [
  "T201", # `print` found
]
lint.per-file-ignores."tests/*test_*.py" = [
  "S101", # Use of assert detected
]

[tool.mypy]
pretty = true
python_version = "3.9"
show_error_codes = true
strict = true

[tool.pytype]
python_version = '3.10'
jobs = '4'
report_errors = true
precise_return = true
protocols = true
strict_import = true

[tool.taskipy.tasks]
test = "pytest -s --cov=wiredify --cov-report=term"
"test:ci" = "task test -s --cov-report=xml:cov.xml"
lint = "pre-commit run -a"
profile = "python -m cProfile"
